--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -26,6 +26,8 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
+    - name: Install Chrome
+      run: sudo apt-get install google-chrome-stable
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
