--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -17,25 +17,25 @@ env:
   PASSWORD: ${{ secrets.PASSWORD }}
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
+
       - name: Set Up Python 3.10
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
-      - name: Install Chrome
-        run: sudo apt-get install google-chrome-stable
+
       - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+        run: pip install -r requirements.txt
+
       - name: Lint With Flake8
         run: |
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=120 --statistics
+
       - name: Run Tests
         run:
           pytest
