--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -18,6 +18,7 @@ permissions:
   contents: read
 
 env:
+  PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   BASE_URL: ${{ secrets.BASE_URL }}
   USERNAME: ${{ secrets.USERNAME }}
   PASSWORD: ${{ secrets.PASSWORD }}
