--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -15,7 +15,7 @@ on:
         default: 'false' # По умолчанию не запускать
 
 permissions:
-  contents: read
+  contents: write
   pages: write
   id-token: write
 
