--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -85,7 +85,7 @@ jobs:
         if: always()
         uses: Sibz/github-status-action@v1
         with: 
-          PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          authToken: ${{ secrets.GITHUB_TOKEN }}
           context: 'Test report'
           state: 'success'
           sha: ${{ github.event.pull_request.head.sha }}
