--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -88,5 +88,5 @@ jobs:
           authToken: ${{ secrets.GITHUB_TOKEN }}
           context: 'Test report'
           state: 'success'
-          sha: ${{ github.sha }}
+          sha: ${{ github.event.pull_request.head.sha }}
           target_url: simple-elf.github.io/github-allure-history/${{ github.run_number }}
