--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Run Tests
         run:
-          pytest --alluredir=allure_results
+          pytest --alluredir=allure_results tests/test_login.py
 
       - name: Get Allure history
         uses: actions/checkout@v2
